# tts-adapter

./: .env.example  .gitignore  LICENSE  README.md  plan.md  plan_v2.md  pyproject.toml
.claude/skills/tts-api/: SKILL.md
app/: main.py
app/api/: dependencies.py
app/api/routes/: health.py  models.py  native_speech.py  openai_speech.py  voices.py
app/api/schemas/: error.py  native_speech.py  openai_speech.py
app/application/services/: error_mapper.py  option_merger.py  profile_resolver.py  provider_registry.py
app/application/use_cases/: list_models.py  list_voices.py  (+1 more)
app/cli/: __main__.py  voices.py
app/domain/: errors.py
assets/models/: models.example.yaml
docs/: CONCEPT.md  api-reference.md  architecture.md  configuration.md  development.md  extension-guide.md
docs/providers/: irodori.md
scripts/: irodori_encode_latent.py
tests/: conftest.py
tests/api/: test_health.py  test_models_voices_routes.py  test_native_speech_route.py  test_openai_speech_route.py  test_schemas.py
tests/application/: test_error_mapper.py  test_list_use_cases.py  test_option_merger.py  test_profile_resolver.py  test_provider_registry.py  test_synthesize_speech.py
tests/cli/: test_voices_cli.py
tests/domain/: test_errors.py  test_interfaces.py  test_model_profile.py  test_synthesis_request.py  test_synthesis_result.py  test_voice_profile.py
tests/infrastructure/: test_fake_provider.py  test_settings.py  test_tempfile_manager.py  test_yaml_model_profile_repository.py  test_yaml_voice_profile_repository.py
tests/integration/: test_acceptance.py
(+27 files in other folders)
